add spark unit test with tracecount