@@ -11,6 +11,14 @@
   <build>
     <plugins>
       <!-- any other plugins -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.9</version>
+            <configuration>
+                <argLine>-XX:MaxPermSize=1024m</argLine>
+            </configuration>
+        </plugin>
 	  <plugin>
 	          <groupId>org.apache.maven.plugins</groupId>
 	          <artifactId>maven-compiler-plugin</artifactId>
@@ -95,13 +103,19 @@
         <artifactId>hadoop-common</artifactId>
         <version>${hadoop.version}</version>
     </dependency>
-
-    <dependency>
-        <groupId>org.apache.hadoop</groupId>
-        <artifactId>hadoop-hdfs</artifactId>
-        <version>${hadoop.version}</version>
-        <type>test-jar</type>
-    </dependency>
+      <dependency>
+          <groupId>org.apache.hadoop</groupId>
+          <artifactId>hadoop-hdfs</artifactId>
+          <version>2.7.1</version>
+          <type>test-jar</type>
+          <scope>compile</scope>
+          <exclusions>
+              <exclusion>
+                  <groupId>javax.servlet</groupId>
+                  <artifactId>servlet-api</artifactId>
+              </exclusion>
+          </exclusions>
+      </dependency>
     <dependency>
         <groupId>org.apache.hadoop</groupId>
         <artifactId>hadoop-hdfs</artifactId>
